Agregado query param al ws de actualizar activo. Si se trata de una operacion de restaurar version, la transicion de estado no deberia ser controlada
